:bricks: updated structure :sparkles: style update

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title>Rede Social - Home</title>
+    <%- include("./configs/head.ejs")%>
+    <title>Shary - Home</title>
   </head>
   <body>
-    <%- include("./configs/header.ejs")%>
+    <%- include("./layouts/header.ejs") %>
 
     <main>
       <h1>Home</h1>
     </main>
 
-    <%- include("./configs/footer.ejs")%>
+    <%- include("./layouts/footer.ejs")%>
   </body>
 </html>
