--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title>Rede Social - Sign In</title>
+    <%- include("./configs/head.ejs")%>
+    <title>Shary - Sign In</title>
   </head>
   <body>
-    <%- include("./configs/header.ejs")%>
+    <%- include("./layouts/header.ejs")%>
 
     <main
-      class="w-10/12 m-auto my-14 flex border-2 border-indigo-300 rounded-md py-5 px-2 justify-around items-center"
+      class="w-10/12 h-4/5 m-auto my-14 flex py-5 px-2 justify-around items-center"
     >
       <div>
-        <h2 class="text-2xl font-bold mb-5">Logo</h2>
-        <p>Faça login para ver fotos e vídeos dos seus amigos.</p>
+        <h2 class="text-indigo-300 text-3xl font-bold font-lobister mb-2">Shary</h2>
+        <p class="font-inter">Faça login para ver fotos e vídeos dos seus amigos.</p>
        <img src="https://cdn-icons-png.flaticon.com/256/5463/5463661.png" 
        alt="illustration"
        class="w-64 mx-auto">
       </div>
 
-      <form action="/login" method="post" class="flex flex-col gap-5 w-1/2">
+      <form action="/login/<%= user._id%>" method="post" class="flex flex-col gap-5 w-1/2">
     
         </div>
         <div class="flex flex-col gap-2">
@@ -34,8 +32,9 @@
             required
           />
         </div>
+
         <div class="flex flex-col gap-2">
-          <label for="password-input">Senha</label>
+          <label for="password-input" class="text-indigo-950">Senha</label>
           <input
             type="text"
             name="password"
@@ -46,6 +45,11 @@
           />
         </div>
 
+        <label class="flex gap-2 cursor-pointer">
+          <input type="checkbox" class="checked:bg-indigo-300 cursor-pointer"> 
+          Lembre-se de mim
+        </label>
+
         <button
           type="submit"
           class="border-2 border-indigo-300 bg-indigo-300 p-2 rounded text-white hover:bg-white hover:text-indigo-300 font-bold transition-colors"
@@ -55,6 +59,6 @@
       </form>
     </main>
 
-    <%- include("./configs/footer.ejs")%>
+    <%- include("./layouts/footer.ejs")%>
   </body>
 </html>
