--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title>Rede Social - Sign Up</title>
+    <%- include("./configs/head.ejs")%>
+    <title>Shary - Sign Up</title>
   </head>
   <body>
-    <%- include("./configs/header.ejs")%>
+    <%- include("./layouts/header.ejs")%>
 
     <main
       class="w-10/12 m-auto my-14 flex border-2 border-indigo-300 rounded-md py-5 px-2 justify-around items-center"
     >
       <div>
-        <h2 class="text-2xl font-bold mb-5">Logo</h2>
+        <h2 class="text-white text-2xl font-bold font-lobister">Shary</h2>
         <p>Cadastre-se para ver fotos e vídeos dos seus amigos.</p>
         <img
           src="https://cdn-icons-png.flaticon.com/512/5463/5463687.png"
@@ -66,6 +64,6 @@
       </form>
     </main>
 
-    <%- include("./configs/footer.ejs")%>
+    <%- include("./layouts/footer.ejs")%>
   </body>
 </html>
