--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -18,7 +18,7 @@
        class="w-64 mx-auto">
       </div>
 
-      <form action="/login/<%= user._id%>" method="post" class="flex flex-col gap-5 w-1/2">
+      <form action="/login" method="post" class="flex flex-col gap-5 w-1/2">
     
         </div>
         <div class="flex flex-col gap-2">
